Fixed background image not showing in production

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,5 @@
 html, body, #root, canvas{
-  background-image: url("Background.png");
+  background-image: url("./assets/Background.png");
   width: 100%;
   height: 100%;
   margin: 0;
